--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,10 @@
 {
     "version": 2,
+    "framework": null,
     "functions": {
-        "api/index.php": {
-            "runtime": "vercel-php@0.6.0"
-        }
+        "api/index.php": { "runtime": "vercel-php@0.6.0" }
     },
     "routes": [
-        {
-            "src": "/img/(.*)",
-            "dest": "/public/img/"
-        },
         {
             "src": "/(.*)",
             "dest": "/api/index.php"
@@ -18,17 +13,18 @@
     "env": {
         "APP_ENV": "production",
         "APP_DEBUG": "true",
-        "APP_URL": "https://housing-murex.vercel.app/",
+        "APP_URL": "https://housing-okr60u34v-muhamad-nur-arifiansyahs-projects.vercel.app",
+        "APP_KEY": "base64:1cXyf/HbTmcy/N2LeRZSatYj3+BOiOsKxpswbUx16b8=",
+
         "APP_CONFIG_CACHE": "/tmp/config.php",
         "APP_EVENTS_CACHE": "/tmp/events.php",
         "APP_PACKAGES_CACHE": "/tmp/packages.php",
         "APP_ROUTES_CACHE": "/tmp/routes.php",
         "APP_SERVICES_CACHE": "/tmp/services.php",
         "VIEW_COMPILED_PATH": "/tmp",
+
         "CACHE_DRIVER": "array",
         "LOG_CHANNEL": "stderr",
-      
-  "SESSION_DRIVER": "cookie"
-    },
-    "outputDirectory": "public"
+        "SESSION_DRIVER": "cookie"
+    }
 }
